# tss-back

./: README.md  launch-server.sh
.github/workflows/: rust.yml
newyork-server/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  sample.json
newyork-server/src/: lib.rs  main.rs  server.rs  tests.rs
newyork-server/src/auth/: guards.rs
newyork-server/src/routes/: ecdsa.rs  eddsa.rs  eth.rs  mod.rs  schnorr.rs
newyork-server/src/storage/: db.rs
newyork-server/src/utils/: mod.rs  requests.rs  settings.rs
white-paper/: white-paper.tex
