[package]
name = "newyork-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies]
rocksdb = "0.18.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time-test = "0.2.1"
log = "0.4"
env_logger = "0.9"
uuid = { version = "0.8.2", features = ["v4"] }
error-chain = "0.12.0"
rust-crypto = "0.2"
hex = "0.4.3"
floating-duration = "0.1.2"
curv = { package = "curv-kzen", version = "0.7.0" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.56"
dotenv = "0.15.0"
envy = "0.4.2"
web3 = "0.18.0"
futures = "0.3"

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
tag = "v0.3.1"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.4.6"
